--- a/src/app/pages/dealer/credit/add-sales/add-sales.component.html
+++ b/src/app/pages/dealer/credit/add-sales/add-sales.component.html
@@ -27,7 +27,7 @@
         <span class="d-none d-sm-block" style="font-size: 15px;">LUBE</span>
       </a>
       <ng-template ngbNavContent>
-        <app-tables-widget33 class="card card-xxl-stretch mb-5 mb-xl-8"></app-tables-widget33>
+        <app-mixed-widget2 class="card card-xxl-stretch mb-5 mb-xl-8"></app-mixed-widget2>
       </ng-template>
     </li>
     <li [ngbNavItem]="4">
@@ -35,7 +35,7 @@
         <span class="d-none d-sm-block" style="font-size: 15px;">ADVANCE</span>
       </a>
       <ng-template ngbNavContent>
-        <app-tables-widget33 class="card card-xxl-stretch mb-5 mb-xl-8"></app-tables-widget33>
+        <app-mixed-widget3 class="card card-xxl-stretch mb-5 mb-xl-8"></app-mixed-widget3>
       </ng-template>
     </li>
   </ul>
