--- a/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
+++ b/src/app/_metronic/layout/components/sidebar/sidebar-menu/sidebar-menu.component.html
@@ -80,7 +80,7 @@
           </span>
         </div>
         <div *ngIf="isViewSale" class="menu-item menu-accordion" routerLinkActive="active"
-          routerLink="/credit/addSales" data-kt-menu-trigger="click">
+          routerLink="/credit/viewSales" data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
@@ -90,7 +90,7 @@
           </span>
         </div>
         <div *ngIf="isAddPayment" class="menu-item menu-accordion" routerLinkActive="active"
-          routerLink="/crafted/pages/profile" data-kt-menu-trigger="click">
+          routerLink="/credit/addPayments" data-kt-menu-trigger="click">
           <span class="menu-link">
             <span class="menu-bullet">
               <span class="bullet bullet-dot"></span>
